--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
                                 s
                             </span>
                             <span data-text-preloader="h" class="letters-loading">
-                                h
+                                t
                             </span>
                             <span data-text-preloader="e" class="letters-loading">
-                                e
+                                a
                             </span>
                             <span data-text-preloader="d" class="letters-loading">
-                                d
+                                t
                             </span>
+                            <span data-text-preloader="d" class="letters-loading">
+                                e
+                            </span>
+
                         </div>
                     </div>
                 </div>
@@ -140,7 +144,7 @@
                 <div class="outer-box">
                     <div class="main-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                            <figure class="logo"><a href=""><img src="https://resource.freedomitinstitutions.com/image/gallery/logo/Your%20Logo%20(1).png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <!--Mobile Navigation Toggler-->
@@ -152,24 +156,7 @@
                             <nav class="main-menu navbar-expand-md navbar-light">
                                 <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
-                                        <li class="current dropdown"><a href="index.html"><span>Home</span></a>
-                                            <ul>
-                                                <li><a href="index.html">Main Home</a></li>
-                                                <li><a href="index-2.html">Home Modern</a></li>
-                                                <li><a href="index-3.html">Home Map</a></li>
-                                                <li><a href="index-4.html">Home Half Map</a></li>
-                                                <li><a href="index-5.html">Home Agent</a></li>
-                                                <li><a href="index-onepage.html">OnePage Home</a></li>
-                                                <li><a href="index-rtl.html">RTL Home</a></li>
-                                                <li class="dropdown"><a href="index.html">Header Style</a>
-                                                    <ul>
-                                                        <li><a href="index.html">Header Style 01</a></li>
-                                                        <li><a href="index-2.html">Header Style 02</a></li>
-                                                        <li><a href="index-3.html">Header Style 03</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                        <li ><a href="index.html"><span>Home</span></a> </li>
                                         <li class="dropdown"><a href="index.html"><span>Listing</span></a>
                                             <ul>
                                                 <li><a href="agents-list.html">Agents List</a></li>
@@ -274,7 +261,7 @@
                 <div class="outer-box">
                     <div class="main-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="https://resource.freedomitinstitutions.com/image/gallery/logo/Your%20Logo%20(1).png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
@@ -1497,7 +1484,7 @@
             <div class="footer-bottom">
                 <div class="auto-container">
                     <div class="inner-box clearfix">
-                        <figure class="footer-logo"><a href="index.html"><img src="assets/images/footer-logo.png" alt=""></a></figure>
+                        <figure class="footer-logo"><a href="index.html"><img src="" alt=""></a></figure>
                         <div class="copyright pull-left">
                             <p><a href="index.html">Aminul</a> &copy; 2021 All Right Reserved</p>
                         </div>
